<resources>
    <string name="app_name">AR Physics</string>
    <string name="action_settings">Settings</string>
    <string name="engine_type">Physics Engine Type</string>
    <string name="engine_type_help">Physics Engine used for simulating the world</string>
    <string name="gravity">Gravity</string>
    <string name="gravity_help">Gravity measured in m/s^2</string>
    <string name="plank_restitution">Restitution of the wooden planks</string>
    <string name="restitution_help">How bouncy the object is: 1.0 (100) implies perfect elasticity, 0.0 implies complete rigidity</string>
    <string name="plank_friction">Friction of the wooden planks</string>
    <string name="friction_help">Force of resistance of an object when moving across another: 0.0 implies no friction, 1.0 (100) implies high friction</string>
    <string name="plank_density">Density of the wooden planks</string>
    <string name="plank_density_help">Density measured in (10^1 kg/m^3). Varies mostly within 30 – 80 (Balsa ~16, Teak ~90)</string>
    <string name="ball_restitution">Restitution of the metal ball</string>
    <string name="ball_friction">Friction of the metal ball</string>
    <string name="ball_density">Density of the wooden planks</string>
    <string name="ball_density_help">Density measured in (10^2 kg/m^3). Aluminium ~26, Titanium ~45, Iron ~79, Lead ~113, Platinum ~215</string>
    <string name="slow_motion">Slow motion</string>
    <string name="slow_motion_help">How much the simulation time should be slowed down (default: 1x = no slowdown)</string>
    <string name="num_floors">Tower`s stack height</string>
    <string name="num_floors_help">Number of floors of the wooden plank tower structure</string>
    <string name="pantheon_icon">Wooden plank structure</string>
    <string name="aim_icon">Metal ball hurdle</string>
    <string name="corsshairs">Cross hair to aim</string>
    <string name="step123_title">Step 1 2 3</string>
    <string name="step123_details">Place a structure first and only after then you can hurdle a ball. Use the icons below.</string>
    <string name="step1">Step 1</string>
    <string name="step2">Step 2</string>
    <string name="restart">Clear the scene</string>
    <string name="already_clean_scene">The scene is already clean.</string>
    <string name="settings_only_while_initial">Settings cannot be changed once simulation is started. Clear the scene with the leftmost icon.</string>
    <string name="quick_help">Quick Help</string>
    <string name="how_to_play_tower">Leftmost icon clears the scene of any previous simulations. The cog icon allows simulation parameter tuning. The building icon places a wooden plank structure to the crosshair center. The rightmost icon hurdles a ball towards the corsshair center.</string>
    <string name="how_to_play_box">Leftmost icon clears the scene of any previous simulations. The cog icon allows simulation parameter tuning. The building icon places wooden planks and a red cylinder inside an invisible collision box. After that you can tap on the red cylinder and move it around. The rightmost icon displays help about moving the cylinder around.</string>
    <string name="tower_before_hurdle">Place a tower first before hurdling a ball</string>
    <string name="tower_after_initial">Please clear the scene before trying to place structure again.</string>
    <string name="aim_at_the_tower">Try to aim at the tower</string>
    <string name="wait_until_locked_in">Wait until locked in: bright green dot in the center</string>
    <string name="chooser">Choose simulation:</string>
    <string name="plank_tower">Plank tower simulation: place a plank tower structure and then hurdle a ball at it</string>
    <string name="collision_box">Collision box simulation: move around a cylinder to stir planks in a collision box</string>
    <string name="move_the_cylinder">Tap on the red cylinder on the screen and move it around</string>
    <string name="box_before_yanking">Place planks and the cylinder first</string>
</resources>
