<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <fragment
        android:id="@+id/sceneform_fragment"
        android:name="dev.csaba.arphysics.PhysicsArFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gallery_layout"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="9"/>

    <ImageView
        android:id="@+id/cross_hair"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gallery_layout"
        app:layout_constraintVertical_chainStyle="spread"
        android:src="@drawable/crosshairs"
        android:contentDescription="@string/corsshairs"
        />

    <LinearLayout
        android:id="@+id/gallery_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sceneform_fragment"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1">

        <ImageView
            android:id="@+id/settingsIcon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/ic_settings"
            android:contentDescription="@string/action_settings" />

        <ImageView
            android:id="@+id/step1Icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/ic_step1"
            android:contentDescription="@string/step1" />

        <ImageView
            android:id="@+id/pantheonIcon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/ic_pantheon"
            android:contentDescription="@string/pantheon_icon" />

        <ImageView
            android:id="@+id/step2Icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/ic_step2"
            android:contentDescription="@string/step2" />

        <ImageView
            android:id="@+id/aimIcon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/ic_aim"
            android:contentDescription="@string/aim_icon" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
