<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/chooserText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooser"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/tower_choice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tower_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plank_tower"
        android:textSize="24sp"
        android:insetTop="10dp"
        android:insetBottom="10dp"
        app:layout_constraintTop_toTopOf="@+id/chooserText"
        app:layout_constraintBottom_toTopOf="@+id/collision_box_choice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/collision_box_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collision_box"
        android:textSize="24sp"
        android:insetTop="10dp"
        android:insetBottom="10dp"
        app:layout_constraintTop_toTopOf="@+id/tower_choice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>